# traders_copilot_mzza_25

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/traders_copilot_mzza_25/: __init__.py  buy_stock.py  data.py  fetch_market_data.py  generate_signals.py  indicators.py  plot_signals.py  sell.py  sell_stock.py  simulate_market_data.py  traders_copilot_mzza_25.py
tests/: indicators_tests.py  test_generate_signals.py  test_generate_synthetic_data.py  test_indicators.py  test_plot_signals.py  test_traders_copilot_mzza_25.py
